[gd_scene load_steps=7 format=3 uid="uid://5yphcex4hbh3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_418fj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwj6u"]
bg_color = Color(0.64928, 0.207621, 0.0167968, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08be7"]
bg_color = Color(0.760373, 0.662483, 0.091765, 1)

[sub_resource type="Animation" id="Animation_jt6nk"]
resource_name = "Banner Roll"
length = 1.5
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.566667, 1.5),
"transitions": PackedFloat32Array(1.17688, 0.574349, 1.48651, 3),
"update": 0,
"values": [Vector2(246, -146), Vector2(246, -298.8), Vector2(246, -14.5334), Vector2(246, -1674)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.13333, 1.36667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.2, 0.2, 0.2, 0), Color(0.2, 0.2, 0.2, 0), Color(0.2, 0.2, 0.2, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ColorRect/Label:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2654, 1.4985),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y2f4k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(246, -146)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.2, 0.2, 0.2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Loading. . .
"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ColorRect/Label:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0raj"]
_data = {
"Banner Roll": SubResource("Animation_jt6nk"),
"RESET": SubResource("Animation_y2f4k")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_418fj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129558, 0.129559, 0.588235)

[node name="Banner" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -714.0
offset_top = -1226.0
offset_right = -246.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwj6u")

[node name="Baner Deco 1" type="Panel" parent="ColorRect/Banner"]
layout_mode = 0
offset_left = 24.0
offset_top = -4.0
offset_right = 41.0
offset_bottom = 1734.0
theme_override_styles/panel = SubResource("StyleBoxFlat_08be7")

[node name="Baner Deco 1" type="Panel" parent="ColorRect/Banner/Baner Deco 1"]
layout_mode = 0
offset_left = 403.0
offset_top = 3.0
offset_right = 420.0
offset_bottom = 1738.0
theme_override_styles/panel = SubResource("StyleBoxFlat_08be7")

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/Banner"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 345.0
offset_right = 138.0
offset_bottom = 1186.0
grow_horizontal = 2
theme_override_constants/separation = 650

[node name="Title" type="Label" parent="ColorRect/Banner/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
text = "Game Name"

[node name="Creds" type="Button" parent="ColorRect/Banner/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -215.5
offset_right = 138.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Begin" type="Button" parent="ColorRect/Banner/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Begin"

[node name="Settings" type="Button" parent="ColorRect/Banner/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings
"

[node name="Quit" type="Button" parent="ColorRect/Banner/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit
"

[node name="Banner_Roll" type="AnimationPlayer" parent="ColorRect/Banner"]
libraries = {
"": SubResource("AnimationLibrary_u0raj")
}

[node name="Timer_Roll" type="Timer" parent="ColorRect/Banner"]
wait_time = 6.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.2, 0.2, 0)

[node name="Label" type="Label" parent="ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -11.5
offset_right = 41.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
text = "Loading. . .
"

[connection signal="pressed" from="ColorRect/Banner/VBoxContainer2/Creds" to="." method="_on_creds_pressed"]
[connection signal="pressed" from="ColorRect/Banner/VBoxContainer/Begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="ColorRect/Banner/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ColorRect/Banner/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="ColorRect/Banner/Banner_Roll" to="." method="_on_banner_roll_animation_finished"]
